--- a/myproj/src/App.css
+++ b/myproj/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.profile {
+  background-color: rgb(185, 85, 167);
+  width: 350px;
+  margin: 50px auto;
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: 1rem 1rem 2rem rgb(65, 64, 64), -1rem -1rem 2rem rgb(82, 81, 81);
+  color: #fff;
+}
